[package]
name = "lumen"
version = "2.3.1"
description = "Lumen VPN Client"
authors = []
license = "GPL-3.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["process", "fs", "time", "sync", "net", "io-util"] }
dirs = "6"
url = "2"
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
